--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
     "core-js": "^2.5.4",
+    "roboto-fontface": "^0.10.0",
     "rxjs": "~6.3.3",
+    "spectre.css": "^0.5.7",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
