--- a/angular.json
+++ b/angular.json
@@ -27,8 +27,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss",
               "node_modules/spectre.css/src/spectre.scss",
+              "src/styles.scss"
             ],
             "scripts": []
           },
