--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ngrx/core": "^1.2.0",
     "@ngrx/effects": "^7.0.0",
     "@ngrx/store": "^7.0.0",
+    "@types/angular-route": "^1.7.0",
     "core-js": "^2.5.4",
     "roboto-fontface": "^0.10.0",
     "rxjs": "^6.3.3",
@@ -35,7 +36,6 @@
     "@angular/compiler-cli": "~7.1.0",
     "@angular/language-service": "~7.1.0",
     "@ngrx/schematics": "^7.0.0",
-    "@types/": "angular/router",
     "@types/core-js": "^2.5.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
